<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/header_gameplay">

        <EditTextPreference
            android:defaultValue="5"
            android:inputType="numberDecimal"
            android:key="time_limit"
            android:title="@string/game_time_title" />


        <EditTextPreference
            android:defaultValue="@string/default_name"
            android:inputType="text"
            android:key="player_name"
            android:title="@string/game_player_name_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_categories">


        <MultiSelectListPreference
            android:defaultValue="@array/category_codes"
            android:entries="@array/category_names"
            android:entryValues="@array/category_codes"
            android:key="allowed_categories"
            android:title="Allowed question categories" />
    </PreferenceCategory>

</PreferenceScreen>